Header & Footer styles and icons.

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,12 +1,7 @@
 
 
 
-// defaults class's [START]
-body {
-    // TODO : delete
-    min-height: 1000px;
-}
-
+// defaults tags [START]
 footer {}
 
 
@@ -19,7 +14,9 @@ h1 {
     text-transform: uppercase;
 }
 
-header {}
+header {
+    line-height: 1;
+}
 
 
 
@@ -31,7 +28,7 @@ ul {
     list-style-type: none;
     padding: 0;
 }
-// defaults class's [END]
+// defaults tags [END]
 
 
 
@@ -61,11 +58,20 @@ ul {
 
 
 
+.content {
+    min-height: 600px;
+    position: relative;
+    z-index: 1;
+}
+
+
+
 // logo [START]
 .logo,
 .logo:visited {
     align-items: flex-end;
     display: flex;
+    padding: 2px 0 0;
     text-decoration: none;
 }
 
