--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -10,6 +10,15 @@ $c_btn_gradient_3:      #55d074;
 $c_link:                #239ee1;
 $c_main:                #777;
 
+$c_search_bg:           #dee2e6;
+
+
+
+// link to images folder
+$i:                     'assets/i';
+
+
+
 // fonts
 $font_main:             'HelveticaNeueCyr',         Arial, Helvetica, sans-serif;
 
