--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -60,8 +60,52 @@ ul {
 
 .content {
     min-height: 600px;
-    position: relative;
+    //position: relative;
     z-index: 1;
+}
+
+
+
+.send_or_grab {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 742px;
+    width: 100%;
+
+    div {
+        border-radius: 18px;
+        box-shadow: 1.32566px 6.62832px 33.1416px 1.32566px rgba(0, 0, 0, 0.15);
+        height: 320px;
+        width: 320px;
+        transition: all 0.3s;
+        padding: 4px;
+
+        &:hover {
+            background: linear-gradient(90deg, $c_special_blue, $c_special_green);
+            cursor: pointer;
+        }
+    }
+
+}
+
+
+.send_or_grab__inner {
+    align-items: center;
+    background-color: #fff;
+    border-radius: 16px;
+    color: $c_special_blue;
+    display: flex;
+    flex-direction: column;
+    font-size: 30px;
+    height: 100%;
+    justify-content: flex-end;
+    padding: 0 0 62px;
+    width: 100%;
+
+    span {
+        padding: 37px 0 0;
+    }
 }
 
 
