--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,8 @@ $btn-sizes: (
     'large': 54
 );
 
+$c_text_dark:                  #3C4858;
+
+$c_special_blue:          	   	#01A9E4;
+
+$c_special_green:		   	   	#48CA87;
