Home page tablet version + homepage fixes

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -4,14 +4,14 @@
 // should be 1st
 @import 'vars';
 @import 'defaults';
-
+@import 'v-application_custom';
 
 
 @import 'footer';
 @import 'header';
 @import 'home';
 @import 'search';
-@import 'v-application_custom';
+@import 'ui-kit';
 
 
 
