--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -7,11 +7,21 @@ footer {}
 
 
 h1 {
-    color: $c_link;
-    font-size: 40px;
-    padding: 1em 0;
+    //color: $c_link;
+    color: #000;
+    font-size: 53px;
+    line-height: 88.6%;
+    //padding: 1em 0;
+    text-align: left;
+    letter-spacing: -0.024em;
+    //text-transform: uppercase;
+}
+
+h2 {
+    color: #000;
+    font-size: 32px;
+    letter-spacing: -0.03em;
     text-align: center;
-    text-transform: uppercase;
 }
 
 header {
@@ -100,7 +110,7 @@ ul {
     font-size: 30px;
     height: 100%;
     justify-content: flex-end;
-    padding: 0 0 62px;
+    padding: 0 0 52px;
     width: 100%;
 
     span {
@@ -142,8 +152,7 @@ ul {
 
 .wrap {
     margin: 0 auto;
-    max-width: 1240px;
-    padding: 0 30px;
+    max-width: 1180px;
     width: 100%;
 }
 // help class's [END]
