--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -7,7 +7,7 @@
   width: 90.5%;
 
   h2 {
-    padding: 0 0 42px;
+    padding: 0 0 28px;
   }
 
   &::after {
@@ -48,7 +48,45 @@
     flex-direction: column;
     font-size: 22px;
     line-height: 28px;
-    padding: 16px 24px 0;
+    padding: 26px 24px 0;
+
+    span {
+      letter-spacing: 0.02em;
+    }
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  .home_advantages {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 52.5%;
+    padding: 115px 0 66px;
+
+    h2 {
+      padding: 0 0 62px;
+    }
+  }
+
+  .home_advantages_left {
+    width: 100%;
+  }
+
+  .home_advantages_right {
+    padding: 0;
+    top: 0;
+    width: 100%;
+  }
+
+  .home_advantages_item {
+    justify-content: space-between;
+    padding: 0 0 65px;
+
+    p {
+      padding: 26px 0 0 0;
+      width: 72%;
+    }
   }
 }
 
@@ -103,7 +141,7 @@
   padding: 0 0 116px;
 
   h2 {
-    padding: 158px 0 70px;
+    padding: 185px 0 64px;
     width: 100%;
   }
 
@@ -119,18 +157,42 @@
     display: flex;
     flex-direction: column;
     font-size: 22px;
-    line-height: 28px;
+    line-height: 27px;
     padding: 0 0 88px;
   }
 }
 
+@media only screen and (max-width: 1400px) {
+  .home_how_it_works {
+    max-width: 85.5%;
+    padding: 0 0 40px;
+
+    h2 {
+      padding: 109px 0 81px;
+    }
+
+    > img {
+      max-width: 410px;
+    }
+  }
+
+  .home_how_it_works_text {
+    padding: 11px 0 0 55px;
+    max-width: 52%;
+
+    p {
+      padding: 0 0 75px;
+    }
+  }
+}
 
 
 .home_intro {
   align-items: flex-end;
   display: flex;
   justify-content: space-between;
-  padding: 34px 0 165px;
+  margin: 0 auto;
+  padding: 23px 0 129px;
   position: relative;
 
   &::after {
@@ -142,33 +204,79 @@
     left: 50%;
     margin: 0 auto;
     position: absolute;
-    transform: translate(-50%,0);
+    transform: translate(-50%, 0);
     width: 224px;
   }
 }
 
 .home_intro_text {
   color: $c_text_dark;
-  width: 45%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 38px;
+  width: 50%;
 
-  h1 {
+  h2 {
+    padding: 0 0 36px;
+    width: 90%;
+    color: #000;
     font-size: 53px;
+    line-height: 88.6%;
+    //padding: 1em 0;
+    text-align: left;
+    letter-spacing: -0.024em;
   }
 
   span {
     font-size: 22px;
+    line-height: 1.3;
+    letter-spacing: 0.0045em;
+    padding: 0 0 42px;
   }
 }
 
-.home_intro_img {}
+.home_intro_img {
+  img {
+    max-width: 100%;
+  }
+}
 
+@media only screen and (max-width: 1400px) {
+  .home_intro {
+    align-items: flex-start;
+    max-width: 75.5%;
+    padding: 64px 0 79px;
+  }
+
+  .home_intro_text {
+    max-width: 44.5%;
+
+    h2 {
+      color: #000;
+      font-size: 32px;
+      letter-spacing: -0.025em;
+      padding: 17px 0 25px;
+      width: 100%;
+    }
+
+    span {
+      font-size: 17px;
+      padding: 0 0 50px;
+    }
+  }
+
+  .home_intro_img {
+    margin: 0 6px 0 0;
+    max-width: 48.5%;
+  }
+}
 
 
 .home_mobile_app {
   display: flex;
   margin: 0 auto;
-  max-width: 62%;
-  padding: 146px 0 238px;
+  max-width: 71%;
+  padding: 116px 0 129px;
   position: relative;
 
   &::after {
@@ -182,19 +290,6 @@
     position: absolute;
     transform: translate(-50%,0);
     width: 224px;
-  }
-
-  > div {
-    padding: 73px 0 0 66px;
-
-    >div {
-      padding: 41px 0 0;
-
-      img {
-        margin: 0 12px 0 0;
-        width: 158px;
-      }
-    }
   }
 
   h2 {
@@ -209,10 +304,47 @@
   }
 }
 
+.home_mobile_app_text {
+  padding: 73px 0 0 60px;
+
+  div {
+    padding: 41px 0 0;
+  }
+
+  img {
+    width: 158px;
+    &:nth-child(1) {
+      margin: 0 16px 0 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  .home_mobile_app {
+    align-items: flex-start;
+    padding: 145px 0 101px;
+
+    > img {
+      width: 47.5%;
+    }
+
+    .home_mobile_app_text {
+      padding: 19px 0 0 32px;
+
+      img {
+
+      }
+    }
+
+    span {
+      letter-spacing: -0.015em;
+    }
+  }
+}
 
 
 .home_send_or_grab {
-  padding: 104px 0 158px	;
+  padding: 100px 0 162px	;
   position: relative;
 
   &::after {
@@ -229,7 +361,13 @@
   }
 
   h2 {
-    padding: 0 0 76px;
+    padding: 0 0 70px;
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  .home_send_or_grab {
+    padding: 131px 0 130px;
   }
 }
 
