--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -10,6 +10,10 @@ $c_btn_gradient_3:      #55d074;
 $c_link:                #239ee1;
 $c_main:                #777;
 
+$c_special_blue:        #01A9E4;
+
+$c_special_green:		#48CA87;
+
 $c_search_bg:           #dee2e6;
 
 
