--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -7,6 +7,8 @@ $c_btn_gradient_1:      #00a8e4;
 $c_btn_gradient_2:      #00a7e5;
 $c_btn_gradient_3:      #55d074;
 
+$c_input_border:		#A19F99;
+
 $c_link:                #239ee1;
 $c_main:                #777;
 
