--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,4 +1,3 @@
-@charset "utf-8";
 
 
 
@@ -7,14 +6,14 @@ $c_btn_gradient_1:      #00a8e4;
 $c_btn_gradient_2:      #00a7e5;
 $c_btn_gradient_3:      #55d074;
 
-$c_input_border:		#A19F99;
+$c_input_border:        #a19f99;
 
 $c_link:                #239ee1;
 $c_main:                #777;
 
-$c_special_blue:        #01A9E4;
+$c_special_blue:        #01a9e4;
 
-$c_special_green:		#48CA87;
+$c_special_green:       #48ca87;
 
 $c_search_bg:           #dee2e6;
 
@@ -36,41 +35,41 @@ $transition:            all .3s ease-in-out;
 
 // HelveticaNeueCyr-Bold
 @font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('/fonts/HelveticaNeueCyr-Bold.eot');
-	src: local('HelveticaNeueCyr-Bold'),
-	url('/fonts/HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
-	url('/fonts/HelveticaNeueCyr-Bold.woff2') format('woff2'),
-	url('/fonts/HelveticaNeueCyr-Bold.woff') format('woff'),
-	url('/fonts/HelveticaNeueCyr-Bold.ttf') format('truetype');
-	font-weight: 700;
-	font-style: normal;
+  font-family: 'HelveticaNeueCyr';
+  src: url('/fonts/HelveticaNeueCyr-Bold.eot');
+  src: local('HelveticaNeueCyr-Bold'),
+  url('/fonts/HelveticaNeueCyr-Bold.eot?#iefix') format('embedded-opentype'),
+  url('/fonts/HelveticaNeueCyr-Bold.woff2') format('woff2'),
+  url('/fonts/HelveticaNeueCyr-Bold.woff') format('woff'),
+  url('/fonts/HelveticaNeueCyr-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
 }
 
 // HelveticaNeueCyr-Light
 @font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('/fonts/HelveticaNeueCyr-Light.eot');
-	src: local('HelveticaNeueCyr-Light'),
-	url('/fonts/HelveticaNeueCyr-Light.eot?#iefix') format('embedded-opentype'),
-	url('/fonts/HelveticaNeueCyr-Light.woff2') format('woff2'),
-	url('/fonts/HelveticaNeueCyr-Light.woff') format('woff'),
-	url('/fonts/HelveticaNeueCyr-Light.ttf') format('truetype');
-	font-weight: 300;
-	font-style: normal;
+  font-family: 'HelveticaNeueCyr';
+  src: url('/fonts/HelveticaNeueCyr-Light.eot');
+  src: local('HelveticaNeueCyr-Light'),
+  url('/fonts/HelveticaNeueCyr-Light.eot?#iefix') format('embedded-opentype'),
+  url('/fonts/HelveticaNeueCyr-Light.woff2') format('woff2'),
+  url('/fonts/HelveticaNeueCyr-Light.woff') format('woff'),
+  url('/fonts/HelveticaNeueCyr-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
 }
 
 // HelveticaNeueCyr-Roman
 @font-face {
-	font-family: 'HelveticaNeueCyr';
-	src: url('/fonts/HelveticaNeueCyr-Roman.eot');
-	src: local('HelveticaNeueCyr-Roman'),
-	url('/fonts/HelveticaNeueCyr-Roman.eot?#iefix') format('embedded-opentype'),
-	url('/fonts/HelveticaNeueCyr-Roman.woff2') format('woff2'),
-	url('/fonts/HelveticaNeueCyr-Roman.woff') format('woff'),
-	url('/fonts/HelveticaNeueCyr-Roman.ttf') format('truetype');
-	font-weight: 400;
-	font-style: normal;
+  font-family: 'HelveticaNeueCyr';
+  src: url('/fonts/HelveticaNeueCyr-Roman.eot');
+  src: local('HelveticaNeueCyr-Roman'),
+  url('/fonts/HelveticaNeueCyr-Roman.eot?#iefix') format('embedded-opentype'),
+  url('/fonts/HelveticaNeueCyr-Roman.woff2') format('woff2'),
+  url('/fonts/HelveticaNeueCyr-Roman.woff') format('woff'),
+  url('/fonts/HelveticaNeueCyr-Roman.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
 }
 
 
